add digital clock

--- a/anime_site/index.html
+++ b/anime_site/index.html
@@ -60,13 +60,14 @@
 
         <nav class="max-w-screen h-14 flex justify-between items-center px-4 md:p-8 backdrop-blur-sm bg-gradient-to-b from-zinc-700/90 to-transparent z-20">
         
-            <button id="sidebaropen" class="h-10 w-10"><img src="https://img.icons8.com/?size=100&id=OTxpMqWbm71F&format=png&color=7950F2" alt=""></button>
+            <button id="sidebaropen" class="h-10 w-10"><img src="https://img.icons8.com/?size=100&id=68555&format=png&color=000000" alt="" class="hover:bg-transparent"></button>
 
-            <div class="font-medium text-indigo-600 text-4xl flex gap-3 font-bebas items-center justify-center">
+            <div class="font-medium text-rose-600 text-4xl flex gap-3 font-bebas items-center justify-center">
                 AnimePhix
             </div>
            
-            <div class="w-32 h-8 bg-violet-700 rounded text-white flex justify-center items-center font-semibold hover:bg-white hover:text-zinc-800">
+            <div class="w-32 h-8 bg-rose-600 rounded text-white flex justify-center items-center font-semibold hover:bg-white hover:text-rose-600 hover:text-zinc-800">
+
                 Login/Sign up
             </div>
         </nav>
@@ -131,7 +132,7 @@
 
            <div class="flex flex-col items-center gap-5 my-10 mx-[50px]">
 
-                <h2 class="text-2xl font-semibold relative right-[800px] text-violet-600">Most Popular</h2>
+                <h2 class="text-2xl font-semibold relative right-[800px] text-rose-600">Most Popular</h2>
                 <div class="flex gap-5  max-w-screen items-center flex-wrap">
                     <div class="h-[400px] min-w-[301px] max-w-[300px] bg-slate-400 flex justify-center items-center overflow-hidden rounded-lg">
                         <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/bcd84731a3eda4f4a306250769675065.jpg" alt="" class="w-full h-full">
@@ -153,7 +154,7 @@
 
            <div class="flex flex-col items-center gap-5 my-10 mx-[50px]">
 
-                <h2 class="text-2xl font-semibold relative right-[800px] text-violet-600">Movies</h2>
+                <h2 class="text-2xl font-semibold relative right-[800px] text-rose-600">Movies</h2>
                 <div class="flex gap-5  max-w-screen items-center flex-wrap">
                     <div class="h-[400px] min-w-[301px] max-w-[300px] bg-slate-400 flex justify-center items-center overflow-hidden rounded-lg">
                         <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/48a7a381cfe141c285adc6cab7f64331.jpg" alt="" class="w-full h-full">
@@ -175,7 +176,7 @@
 
            <div class="flex flex-col items-center gap-5 my-10 mx-[50px]">
 
-                <h2 class="text-2xl font-semibold relative right-[800px] text-violet-600">TV Series</h2>
+                <h2 class="text-2xl font-semibold relative right-[800px] text-rose-600">TV Series</h2>
                 <div class="flex gap-5  max-w-screen items-center flex-wrap">
                     <div class="h-[400px] min-w-[301px] max-w-[300px] bg-slate-400 flex justify-center items-center overflow-hidden rounded-lg">
                         <img src="https://cdn.noitatnemucod.net/thumbnail/300x400/100/2f5abb230576afc9894520bd66de30b5.jpg" alt="" class="w-full h-full">
@@ -201,7 +202,7 @@
         <footer class="w-full mt-10 py-[40px] px-[40px] border-t-[1px] border-gray-600 bg-zinc-800 flex flex-col gap-y-[20px]">
 
             <div id="footer_upper" class="flex gap-x-[30px]">
-                <h2 class="font-medium text-indigo-600 text-4xl flex gap-3 font-bebas items-center justify-center">AnimePhix</h2>
+                <h2 class="font-medium text-rose-600 text-4xl flex gap-3 font-bebas items-center justify-center">AnimePhix</h2>
                 <div class="border-[1px] border-gray-700"></div>
                 <div id="social_media" class="flex gap-x-[20px] items-center">
                     <a id="github" href="https://github.com/Harman21305" class="h-[28px] w-[28px] rounded-full flex justify-center items-center">
