--- a/anime_site/index.html
+++ b/anime_site/index.html
@@ -66,7 +66,7 @@
                 AnimePhix
             </div>
            
-            <div class="w-32 h-8 bg-rose-600 rounded text-white flex justify-center items-center font-semibold hover:bg-white hover:text-rose-600 hover:text-zinc-800">
+            <div class="w-32 h-8 bg-rose-600 rounded text-white flex justify-center items-center font-semibold hover:bg-white hover:text-rose-600 ">
 
                 Login/Sign up
             </div>
